# quectel-cm

./: README.md  configure.ac  device.c  main.c  mbim-cm.c  qmap_bridge_mode.c
src/: MPQMUX.c  MPQMUX.h  Makefile.am  QMIThread.c  QMIThread.h  device.c  quectel_cm.c  util.h
